<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="287dp"
        android:layout_height="197dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image_logo"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <ImageButton
        android:id="@+id/fandoms"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/zero"
        android:contentDescription="@string/button_fandom"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/Where"
        app:layout_constraintEnd_toEndOf="@+id/authors"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/authors"
        app:layout_constraintTop_toBottomOf="@+id/authors"
        app:srcCompat="@drawable/fandom_button" />

    <ImageButton
        android:id="@+id/authors"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/zero"
        android:contentDescription="@string/button_author"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/fandoms"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:srcCompat="@drawable/authors_button" />

    <ImageButton
        android:id="@+id/map"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/zero"
        android:contentDescription="@string/button_loft_map"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/authors"
        app:layout_constraintEnd_toEndOf="@+id/go_quest"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/go_quest"
        app:layout_constraintTop_toBottomOf="@+id/go_quest"
        app:srcCompat="@drawable/map_button" />

    <ImageButton
        android:id="@+id/Where"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="35dp"
        android:background="@color/zero"
        android:contentDescription="@string/button_where_map"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fandoms"
        app:layout_constraintStart_toStartOf="@+id/fandoms"
        app:layout_constraintTop_toBottomOf="@+id/fandoms"
        app:srcCompat="@drawable/where_map_button" />

    <ImageButton
        android:id="@+id/go_quest"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="5dp"
        android:background="@color/zero"
        android:contentDescription="@string/button_quest"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:srcCompat="@drawable/quest_button" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/frame"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>