<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <EditText
        android:id="@+id/fandomsfilterEdit"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="top"
        android:layout_margin="15dp"
        android:background="@drawable/serch"
        android:gravity="center"
        android:hint="@string/text_editor_fandoms"
        android:inputType="text"
        android:textColorHint="@color/white50"
        tools:ignore="VisualLintTextFieldSize"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:layout_gravity="top"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/fandomButtonsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
        </LinearLayout>

    </ScrollView>


    <ImageButton
        android:id="@+id/button_start"
        android:layout_width="330dp"
        android:layout_height="98dp"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/background"
        android:scaleType="fitCenter"
        android:contentDescription="@string/button"
        app:srcCompat="@drawable/filter_button" />

    <ImageView
        android:id="@+id/frameImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image"
        android:scaleType="fitXY"
        android:src="@drawable/frame2" />

</FrameLayout>